@@ -21,6 +21,7 @@ import de.jfachwert.bank.*;
 import de.jfachwert.math.Bruch;
 import de.jfachwert.math.Nummer;
 import de.jfachwert.math.PackedDecimal;
+import de.jfachwert.math.Prozent;
 import de.jfachwert.med.BSNR;
 import de.jfachwert.med.IK;
 import de.jfachwert.med.LANR;
@@ -116,6 +117,7 @@ public class FachwertFactory {
         INSTANCE.register(LANR.class);
         INSTANCE.register(BSNR.class);
         INSTANCE.register(Name.class);
+        INSTANCE.register(Prozent.class);
     }
 
     private FachwertFactory() {
